--- a/styles/global.css
+++ b/styles/global.css
@@ -2,30 +2,30 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700");
 
 body {
-  color: #EEF;
+  color: #eef;
   background-color: #223;
-  font-family: 'Ubuntu', sans-serif;
-  font-size: small;
+  font-family: "Ubuntu", sans-serif;
+  font-size: larger;
 }
 
 nav {
   margin: auto;
-  max-width: 1200px;
+  max-width: 1500px;
   vertical-align: middle;
 }
 
 main {
   margin: 10px auto;
   padding: 0px 5px 25px 5px;
-  max-width: 1200px;
+  max-width: 1500px;
   vertical-align: middle;
 
-  border: 2px solid #EEF;
-  border-radius:10px;
+  border: 2px solid #eef;
+  border-radius: 10px;
 }
 
 button {
-  color: #EEF;
+  color: #eef;
   background-color: #223;
 
   padding: 4px 10px;
@@ -33,7 +33,7 @@ button {
   border: 4px solid #446;
   border-radius: 5px;
 
-  cursor:pointer;
+  cursor: pointer;
 }
 
 button:hover {
@@ -44,18 +44,18 @@ button:hover {
   border: 4px solid #446;
   border-radius: 5px;
 
-  cursor:pointer;
+  cursor: pointer;
 }
 
 a:not(.button) {
-  color: #AAB;
+  color: #aab;
   font-style: italic;
   text-decoration: underline;
 }
 
 a.button {
   appearance: button;
-  color: #EEF;
+  color: #eef;
   background-color: #223;
 
   padding: 4px 10px;
@@ -85,19 +85,22 @@ table {
 }
 
 tr:not(:last-of-type) {
-  border-bottom: 1px solid #EEF;
+  border-bottom: 1px solid #eef;
 }
 
-th:not(:last-of-type), td:not(:last-of-type) {
-  border-right: 1px solid #EEF;
+th:not(:last-of-type),
+td:not(:last-of-type) {
+  border-right: 1px solid #eef;
 }
 
-th, td {
+th,
+td {
   padding: 5px 0px 6px 0px;
 
   text-align: left;
 }
 
-th:not(:first-of-type), td:not(:first-of-type) {
+th:not(:first-of-type),
+td:not(:first-of-type) {
   padding-left: 5px;
 }
